test/lambda/negative/runtime/null_reference.ls
// @expect-error: E301
// @description: Null reference - accessing property of null

let x = null
let y = x.name
